# Project-X

./: .gitignore  PRD.docx  README.md
.claude/: settings.local.json
backend/: .env.example  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 1b0c20d268a4_initial.py
backend/models/: __init__.py  brand.py  conversation.py
backend/prompts/: voice_agent.py
backend/routers/: health.py  webhooks_vapi.py
backend/services/: sarvam_service.py  vapi_service.py
