[project]
name = "project-sole"
version = "0.1.0"
description = "AI-Powered Customer Support Agent for Indian D2C Brands"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "sentry-sdk[fastapi]==2.19.2",
    "python-dotenv==1.0.1",
]
